# oqp-hrm-quantum-computer-chip-design

./: .dockerignore  .gitignore  ARTIFACTS.md  ARTIFACTS.sha256  COMMERCIAL-LICENSING.md  Dockerfile  LICENSE-CODE.md  Makefile  README.md  VALIDATION_ROADMAP.md  licence.md  pyproject.toml
.devcontainer/: devcontainer.json
architecture/: complete-design.md  control-system.md  demonstrator-roadmap.md  encoding.md  error-correction-roadmap.md  execution-model.md  feed-forward.md  gds-path.md  isa.md  lab-readiness.md  microarchitecture.md  node-alpha-closure.md  overview.md  prototype-readiness.md  resource-model.md  universal-model.md
docs/: 30-minute-reproduction.md  assumption-ledger.md  data-room-index.md  evidence-ledger.json  grant-concept-note.md  no-budget-completion-audit.md  no-budget-partner-package.md  open-validation-issues.md  partner-outreach.md  partner-pipeline.md  preprint-outline.md  reviewer-pack.md  value-increase-completion-audit.md
hardware/: Heralded_Reset_Mesh_Blueprint.yaml  Heralded_Reset_Mesh_V1_Champion.json
oqp/: __init__.py  blueprint.py  cli.py  compat.py  compiler.py  complete_simulation.py  demo.py  design_dossier.py  device_sweep.py  eigenmode_device.py  encoding.py  error_budget.py  error_correction.py  evidence_bundle.py  fault_tolerance.py  gds.py  hardware.py  layout_plan.py  layout_readiness.py  meep_device.py  meep_probe.py  meep_runner.py  metrics.py  node_alpha.py  node_alpha_compute.py  pdk.py  performance_upgrade.py  primitive.py  prototype_readiness.py  readiness.py  report.py  resource_model.py  resource_sweep.py  (+10 more)
(+36 files in other folders)
