[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-quantum-photonics"
version = "0.1.0"
description = "Simulation-only OQP-HRM photonic quantum computer chip design and reproducibility tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "licence.md" }
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scipy>=1.12",
  "strawberryfields>=0.23",
]

[project.scripts]
oqp = "oqp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oqp*"]
